--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -70,36 +70,35 @@ jobs:
             echo "CHART_UPDATE_PR_NUMBER=$(echo "$PR_STATUS" | tail -n 1)" >> $GITHUB_ENV
           fi
           
-      - name: Wait for All checks passed workflow to succeed
+      - name: Wait until "All checks passed" workflow succeeded
         if: env.UPDATE_CHART == 'true'
         env:
           GH_TOKEN: ${{ secrets.BOT_TOKEN }}
         run: |
-          echo "Waiting for 'All checks passed' workflow to succeed"
+          echo "Waiting for 'All checks passed' workflow to succeed..."
 
-          for i in {1..20}; do
-            STATUS=$(gh run list \
-              --json name,conclusion,headBranch \
-              --jq '.[] | select(.name=="All checks passed" and .headBranch=="'${BRANCH_NAME}'") | .conclusion')
-          
+          for i in {1..40}; do
+            STATUS=$(gh api repos/${{ env.REPOSITORY }}/check-runs \
+              --method GET \
+              -f filter=latest \
+              -F ref="refs/pull/${{ env.CHART_UPDATE_PR_NUMBER }}/head" \
+              | jq -r '.check_runs[] | select(.name == "All checks passed") | .conclusion' | head -n1)
+
             echo $STATUS
 
             if [ "$STATUS" = "success" ]; then
-              echo "All checks passed"
-              exit 0
+              echo "'All checks passed' succeeded"
+              break
             fi
 
-            if [ "$STATUS" = "failure" ]; then
-              echo "All checks passed failed"
+            if [ "$STATUS" = "failure" ] || [ "$STATUS" = "cancelled" ]; then
+              echo "'All checks passed' did NOT succeed"
               exit 1
             fi
 
-            echo "Checks not ready yet, retry $i/20..."
-            sleep 60
+            echo "Waiting..."
+            sleep 30
           done
-
-          echo "Timed out waiting for All checks passed workflow"
-          exit 1
 
       - name: Merge PR
         if: env.UPDATE_CHART == 'true'
