--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -76,7 +76,7 @@ jobs:
           GH_TOKEN: ${{ secrets.BOT_TOKEN }}
           PR_NUMBER: ${{ env.CHART_UPDATE_PR_NUMBER }}
         run: |
-          RESULT=$(gh pr checks $PR_NUMBER)
+          RESULT=$(gh pr checks $PR_NUMBER --json)
           echo $RESULT
           exit 1
 
