--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -77,7 +77,8 @@ jobs:
           PR_NUMBER: ${{ env.CHART_UPDATE_PR_NUMBER }}
         run: |
           sleep 15
-          RESULT=$(gh pr checks $PR_NUMBER --json bucket,name,state,workflow)
+          RESULT=$(gh pr checks $PR_NUMBER --json bucket,name \
+            --jq '.[] | select(.name == "checks-passed") | .bucket')
           echo $RESULT
           exit 1
 
