--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -76,8 +76,7 @@ jobs:
           GH_TOKEN: ${{ secrets.BOT_TOKEN }}
           PR_NUMBER: ${{ env.CHART_UPDATE_PR_NUMBER }}
         run: |
-          sleep 15
-          RESULT=$(gh pr checks $PR_NUMBER --json bucket,name \
+          RESULT=$(gh pr checks $PR_NUMBER --watch --json bucket,name \
             --jq '.[] | select(.name == "checks-passed") | .bucket')
           echo $RESULT
           exit 1
