--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -75,8 +75,9 @@ jobs:
         timeout-minutes: 20
         env:
           PR_NUMBER: ${{ env.CHART_UPDATE_PR_NUMBER }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.BOT_TOKEN }}
         run: |
+          sleep 10
           while true; do
             RESULT=$(gh pr checks "$PR_NUMBER" --json bucket,name \
               --jq '.[] | select(.name == "checks-passed") | .bucket')
